# DL-from-scratch

./: CMakeLists.txt  README.md  layers.cpp  layers.h  main.cpp  operations.cpp  operations.h  read  test  test.cpp  test3d  test3d.cpp  train  train_linear_layer.cpp
